# GemCAD_HalfEdgeDS

./: CMakeLists.txt
msvsbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  OpenGL_HalfEdgeDS.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.vcxproj  main.vcxproj.filters
msvsbuild/Debug/: main.ilk
msvsbuild/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  custombuild.command.1.tlog
msvsbuild/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
msvsbuild/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  FindGLUT.cmake  HalfEdgeDS.cpp  HalfEdgeDS.h  HalfEdgeDSElements.cpp  HalfEdgeDSElements.h  HalfEdgeDSRendering.cpp  HalfEdgeDSRendering.h  Main.cpp  Main.h  Vec3.h
